src/objects/Risk_Priority__c.object
<CustomObject>
    <description>This is a master object in Quality Central. The priority for addressing risk based on levels of severity and probability.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Describe actions/steps to follow for this priority level.</description>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <description>Integer value representing risk priority.</description>
        <inlineHelpText>Risk Priority Number (RPN) assigns a value the a specific combination of severity and probability.</inlineHelpText>
        <label>Number</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Threshold_Action__c</fullName>
        <description>Actions to be automated for each priority level.  Each value must correspond to code and validation rules enforcing what is expressed in the value.</description>
        <inlineHelpText>Set the action to be take for this priority level.</inlineHelpText>
        <label>Threshold Action</label>
        <picklist>
            <picklistValues>
                <fullName>Default to Yes CAPA Required</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Default to No CAPA Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Force Yes CAPA Required</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Risk Priority</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Risk Priority</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Risk Priorities</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>